# Voices-in-the-Wild-Bench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  examples.jsonl
docs/: index.html
results/: README.md
scripts/: README.md  evaluate_predictions.py  run_inference.py
src/voices_in_the_wild_bench/: __init__.py
src/voices_in_the_wild_bench/datasets/: __init__.py  categories.py  jsonl.py
src/voices_in_the_wild_bench/metrics/: __init__.py  error_rate.py
src/voices_in_the_wild_bench/models/: __init__.py  base.py  canary.py  kimi_audio.py  mega_asr.py  parakeet.py  qwen3_asr.py  stepaudio2.py  utils.py  whisper.py
src/voices_in_the_wild_bench/reporting/: __init__.py  breakdown.py
tests/: test_cli.py  test_evaluation.py  test_examples_and_models.py
