[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voices-in-the-wild-bench"
version = "0.1.0"
description = "Evaluation utilities for Voices-in-the-Wild-Bench."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
